# icanexplain

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  ibis.ipynb  index.html  index.ipynb  mkdocs.yml  pyproject.toml  test.ipynb  workbench.ipynb
.github/actions/install-env/: action.yml
.github/workflows/: docs.yml  unit-tests.yml
docs/: README.md  hugo.yaml  index.ipynb  index.md  installation.md
docs/content/: _index.md  ratio.ipynb  ratio.md  total.ipynb
docs/examples/: fashion-brand-co2e.ipynb  fashion-brand-co2e.md  ibis.ipynb  ibis.md  iowa-whiskey-sales.ipynb  iowa-whiskey-sales.md  simple-revenue-funnel.ipynb  simple-revenue-funnel.md
docs/methods/: funnel.ipynb  funnel.md  ratio.md  total.md
docs/public/: 404.html  index.html  index.xml  sitemap.xml
docs/public/categories/: index.html  index.xml
docs/public/css/: hugo-tufte-options.min.css  hugo-tufte-options.min.css.map  hugo-tufte.min.css.map
docs/public/ratio/: index.html
docs/public/tags/: index.html  index.xml
docs/resources/_gen/assets/scss/: hugo-tufte-options.scss_4ccf1086af3575e2c2c6b3856932b0fa.json  hugo-tufte.scss_9cc12999fbb11f51025d5b0afd408ed9.content  hugo-tufte.scss_9cc12999fbb11f51025d5b0afd408ed9.json
docs/theme/: README.md
docs/wip/: natality.ipynb
examples/: fashion-brand-co2e.ipynb  ibis.ipynb  iowa-whiskey-sales.ipynb  simple-revenue-funnel.ipynb
examples/fashion-brand-co2e/: index.html
examples/ibis/: index.html
examples/iowa-whiskey-sales/: index.html
examples/simple-revenue-funnel/: index.html
icanexplain/: __init__.py  datasets.py  test_mean.py  test_sum.py
icanexplain/datasets/: world_demography.csv
installation/: index.html
methods/: funnel.ipynb  ratio.ipynb
methods/funnel/: index.html
methods/ratio/: index.html
methods/total/: index.html
munpack/: __init__.py  datasets.py  test_mean.py  test_sum.py
search/: search_index.json
site/: index.html
site/examples/: ibis.ipynb
site/examples/fashion-brand-co2e/: index.html
site/methods/: total.ipynb
site/methods/funnel/: index.html
site/theme/: main.html
theme/: index.html
wip/: health-insurance-claims.ipynb  us-ge-popular-vote.ipynb
