[tool.poetry]
name = "icanexplain"
version = "0.3.0"
description = "Explain why metrics change by unpacking them"
authors = ["Max Halford <maxhalford25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ibis-framework = "^9.5.0"
altair = "^5.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
jupyter = "^1.0.0"
pandas = "^2.2.1"
pytest = "^8.2.1"
names = "^0.3.0"
ibis-framework = {extras = ["duckdb", "pandas"], version = "^9.5.0"}
mkdocs = "^1.6.0"
pygments = "^2.18.0"
vega-datasets = "^0.9.0"
mkdocs-material = "^9.5.26"
polars = "^1.0.0"
pre-commit = "^3.8.0"
mypy = "^1.11.2"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--doctest-glob=docs/api/*.md",
    "--verbose",
    "--color=yes",
    "--strict-markers",
]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
